made content changes to team hoodie page

--- a/HTML/Products/sis-squad-team-hoodie.html
+++ b/HTML/Products/sis-squad-team-hoodie.html
@@ -55,14 +55,14 @@
         <div class="Product-images">
           <div class="Product-img-large">
             <img
-              src="/Images/Merch/FerralWolf2003 hoodie.png"
+              src="/Images/Merch/SIS hoodie.png"
               class="img-large"
               alt="nightwolf hoodie"
             />
           </div>
           <div class="Product-img-collage">
             <span class="collage-block">
-              <img src="/Images/Merch" class="img-small" />
+              <img src="/Images/Merch/SIS hoodie.png" class="img-small" />
             </span>
             <span class="collage-block">
               <img src="/Images/Merch" class="img-small" />
@@ -91,13 +91,16 @@
           </div>
         </div>
         <span class="product-details">
-          <h1 class="product-head">Ferralwolf2003 eco Hoodie</h1>
+          <h1 class="product-head">S-I-S SQUAD Team Hoodie</h1>
           <p class="product-info">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
             consequuntur, earum in neque consequatur tempore est unde eligendi
             repellat, sit incidunt soluta nobis mollitia rem. Vitae magnam
             dolorem illum labore? Lorem ipsum dolor sit amet consectetur
-            adipisicing elit.
+            adipisicing elit. Lorem ipsum dolor sit amet, consectetur
+            adipisicing elit. Nihil, eos nobis sequi odit ut blanditiis. Beatae
+            praesentium qui illo repudiandae accusamus? Voluptatum
+            necessitatibus laboriosam alias ab, maiores praesentium fugit eius.
           </p>
 
           <span class="available-colours position-blocks block-margin">
