added extra preview images to team hoodie PDP

--- a/HTML/Products/sis-squad-team-hoodie.html
+++ b/HTML/Products/sis-squad-team-hoodie.html
@@ -65,28 +65,46 @@
               <img src="/Images/Merch/SIS hoodie.png" class="img-small" />
             </span>
             <span class="collage-block">
-              <img src="/Images/Merch" class="img-small" />
+              <img
+                src="/Images/Merch/SIS Team hoodie front.png"
+                class="img-small"
+              />
             </span>
             <span class="collage-block">
-              <img src="/Images/Merch" class="img-small extra-padding" />
+              <img
+                src="/Images/Merch/SIS Team hoodie left.png"
+                class="img-small"
+              />
             </span>
             <span class="collage-block">
-              <img src="/Images/Merch" class="img-small extra-padding" />
+              <img
+                src="/Images/Merch/SIS Team hoodie right.png"
+                class="img-small"
+              />
             </span>
             <span class="collage-block">
-              <img class="img-small" src="/Images/Merch" />
+              <img
+                class="img-small"
+                src="/Images/Merch/SIS Team Hoodie back flat.png"
+              />
             </span>
             <span class="collage-block block-middle-1">
-              <img class="img-small extra" src="/Images/Merch" />
+              <img
+                class="img-small extra"
+                src="/Images/Merch/SIS Team hoodie flat front.png"
+              />
             </span>
             <span class="collage-block block-middle-2">
-              <img class="img-small extra" src="/Images/Merch/" />
+              <img
+                class="img-small"
+                src="/Images/Merch/SIS Team hoodie rounded front.png"
+              />
             </span>
             <span class="collage-block block-middle-2">
-              <img class="img-small extra" src="/Images/Merch/" />
-            </span>
-            <span class="collage-block block-middle-2">
-              <img class="img-small extra" src="/Images/Merch/" />
+              <img
+                class="img-small"
+                src="/Images/Merch/SIS Team hoodie rounded back.png"
+              />
             </span>
           </div>
         </div>
