added social link to footer of Team hoodie PDP

--- a/HTML/Products/sis-squad-team-hoodie.html
+++ b/HTML/Products/sis-squad-team-hoodie.html
@@ -304,7 +304,9 @@
           </div>
           <div class="Our-links">
             <a class="social-links" href="#">N1ghtW0lf04</a>
-            <a class="social-links" href="#">FerralWolf2003</a>
+            <a class="social-links" href="https://beacons.ai/ferralwolf2003"
+              >FerralWolf2003</a
+            >
             <a class="social-links" href="#">ibedrippinYT</a>
           </div>
         </div>
