added account button to navigation

--- a/Home.html
+++ b/Home.html
@@ -50,6 +50,10 @@
                 <ion-icon name="cart"></ion-icon>
                 Basket</a
               >
+              <button class="navigation-link">
+                <ion-icon name="person-circle-outline"></ion-icon>
+                Account
+              </button>
             </div>
           </div>
         </div>
