added account nav button to all pages

--- a/HTML/All.html
+++ b/HTML/All.html
@@ -45,6 +45,10 @@
               <ion-icon class="basket-icon" name="cart"></ion-icon>
               Basket
             </a>
+            <button class="navigation-link">
+              <ion-icon name="person-circle-outline"></ion-icon>
+              Account
+            </button>
           </div>
         </div>
         <div class="Account-tab">
