--- a/HTML/Products/jellbelly-classic-eco-hoodie.html
+++ b/HTML/Products/jellbelly-classic-eco-hoodie.html
@@ -46,6 +46,10 @@
               <ion-icon name="cart"></ion-icon>
               Basket</a
             >
+            <button class="navigation-link">
+              <ion-icon name="person-circle-outline"></ion-icon>
+              Account
+            </button>
           </div>
         </div>
         <div class="Account-tab">
