--- a/Home.html
+++ b/Home.html
@@ -19,6 +19,9 @@
       sizes="32x32"
       href="/Images/Tab Logo.png"
     />
+
+    <script src="Script.js"></script>
+
     <title>S-I-S SQUAD</title>
   </head>
   <body>
