added js file, made changes to css and html file

--- a/Home.html
+++ b/Home.html
@@ -53,7 +53,7 @@
                 <ion-icon name="cart"></ion-icon>
                 Basket</a
               >
-              <button class="navigation-link">
+              <button class="navigation-link account">
                 <ion-icon name="person-circle-outline"></ion-icon>
                 Account
               </button>
