--- a/HTML/Sign-in.html
+++ b/HTML/Sign-in.html
@@ -47,13 +47,13 @@
               </form>
             </div>
             <div class="tabs">
-              <a href="HTML/All.html" class="navigation-link All">View All</a>
+              <a href="/HTML/All.html" class="navigation-link All">View All</a>
               <a href="#" class="navigation-link">Best Sellers!</a>
               <a href="#" class="navigation-link">
                 <ion-icon name="cart"></ion-icon>
                 Basket</a
               >
-              <a href="//Sign-in.html" class="navigation-link account">
+              <a href="/HTML/Sign-in.html" class="navigation-link account">
                 <ion-icon name="person-circle-outline"></ion-icon>
                 Sign-in
               </a>
@@ -82,25 +82,102 @@
     </section>
     <section class="signin-container">
       <div class="signin-body">
-        <span class="signin-head">
+        <div class="signin-head">
           <button class="signin-titles login-title">Sign-in</button>
           <button class="signin-titles account-title">Create Account</button>
-        </span>
+        </div>
         <div class="login-tab">
-          <form class="login-form">
-            <div>
+          <form>
+            <div class="login-form">
               <label class="email-lable" for="email-input"
                 >Enter your email</label
               >
-              <input type="email" name="email-input" required />
+              <input
+                type="email"
+                name="email-input"
+                id="email-input"
+                required
+              />
             </div>
-            <div>
+            <div class="login-form">
+              <a href="/HTML/forgot-password.html" class="forgot-pass"
+                >Forgotten password?</a
+              >
               <label class="password-label" for="password-input"
                 >Password</label
               >
-              <input type="password" name="password-input" required />
+              <input
+                type="password"
+                id="password-input"
+                name="password-input"
+                required
+              />
             </div>
             <button type="submit" class="login-btn">Login</button>
+          </form>
+          <a class="help-link" href="/HTML/footer-links/FAQS.html"
+            >Need some help?</a
+          >
+        </div>
+        <div class="createAcc-tab">
+          <form>
+            <div class="createAcc-form">
+              <label class="email-lable" for="firstName-input"
+                >Enter your first name</label
+              >
+              <input
+                type="text"
+                name="firstName-input"
+                id="firstName-input"
+                required
+              />
+            </div>
+            <div class="login-form">
+              <label class="email-lable" for="lastName-input"
+                >Enter your last name</label
+              >
+              <input
+                type="text"
+                name="lastName-input"
+                id="lastName-input"
+                required
+              />
+            </div>
+
+            <div class="createAcc-form">
+              <label class="email-lable" for="email-input"
+                >Enter your email</label
+              >
+              <input
+                type="email"
+                name="email-input"
+                id="email-input"
+                required
+              />
+            </div>
+            <div class="createAcc-form">
+              <label class="password-label" for="Password1-input"
+                >Enter a Password</label
+              >
+              <input
+                type="password"
+                id="password1-input"
+                name="password1-input"
+                required
+              />
+            </div>
+            <div class="createAcc-form">
+              <label class="password-label" for="password2-input"
+                >Confirm Password</label
+              >
+              <input
+                type="password"
+                id="password2-input"
+                name="password2-input"
+                required
+              />
+            </div>
+            <button type="submit" class="login-btn">Create</button>
           </form>
         </div>
       </div>
