Added sign-in navigation button to all current pages

--- a/Banner&footer.html
+++ b/Banner&footer.html
@@ -53,7 +53,7 @@
                 <ion-icon name="cart"></ion-icon>
                 Basket</a
               >
-              <a href="//Sign-in.html" class="navigation-link account">
+              <a href="/HTML/Sign-in.html" class="navigation-link account">
                 <ion-icon name="person-circle-outline"></ion-icon>
                 Sign-in
               </a>
