--- a/HTML/Sign-in.html
+++ b/HTML/Sign-in.html
@@ -47,16 +47,13 @@
               </form>
             </div>
             <div class="tabs">
+              <a href="/Home.html" class="navigation-link">Home</a>
               <a href="/HTML/All.html" class="navigation-link All">View All</a>
               <a href="#" class="navigation-link">Best Sellers!</a>
               <a href="#" class="navigation-link">
                 <ion-icon name="cart"></ion-icon>
                 Basket</a
               >
-              <a href="/HTML/Sign-in.html" class="navigation-link account">
-                <ion-icon name="person-circle-outline"></ion-icon>
-                Sign-in
-              </a>
             </div>
           </div>
           <div class="basket-tab">
