Css and Html changes, added a popular tag on product cards

--- a/HTML/All.html
+++ b/HTML/All.html
@@ -329,8 +329,11 @@
                     </div>
                   </form>
                 </div>
-                <div class="Classic-banner">
-                  <p class="classic-text">Classic</p>
+                <div class="Popular-banner">
+                  <p class="Popular-text">
+                    <ion-icon class="Popular-icon" name="sparkles"></ion-icon>
+                    Popular
+                  </p>
                 </div>
               </div>
             </div>
@@ -430,8 +433,11 @@
                     </div>
                   </form>
                 </div>
-                <div class="Classic-banner">
-                  <p class="classic-text">Classic</p>
+                <div class="Popular-banner">
+                  <p class="Popular-text">
+                    <ion-icon class="Popular-icon" name="sparkles"></ion-icon>
+                    Popular
+                  </p>
                 </div>
               </div>
             </div>
@@ -531,8 +537,11 @@
                     </div>
                   </form>
                 </div>
-                <div class="Classic-banner">
-                  <p class="classic-text">Classic</p>
+                <div class="Popular-banner">
+                  <p class="Popular-text">
+                    <ion-icon class="Popular-icon" name="sparkles"></ion-icon>
+                    Popular
+                  </p>
                 </div>
               </div>
             </div>
