Added folders to tidy up images and fixed links

--- a/HTML/All.html
+++ b/HTML/All.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/Images/Tab Logo.png"
+      href="/Images/Merch/Team/Logo/Tab Logo.png"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
@@ -24,7 +24,7 @@
           <a href="/Home.html" class="Banner-logo">
             <img
               class="Logo"
-              src="/Images/S-I-S Logo.png"
+              src="/Images/Merch/Team/Logo/S-I-S Logo.png"
               alt="Sis squad logo"
             />
           </a>
@@ -41,7 +41,7 @@
           <div class="tabs">
             <a href="/Home.html" class="navigation-link All">Home</a>
             <a href="#" class="navigation-link">Best Sellers!</a>
-            <a href="#" class="navigation-link">
+            <a class="navigation-link basket">
               <ion-icon class="basket-icon" name="cart"></ion-icon>
               Basket
             </a>
@@ -235,7 +235,7 @@
         <div class="product-grid">
           <div class="Product-tab all-tab-size">
             <img
-              src="/Images/Merch/N1ghtW0lf04 hoodie.png"
+              src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
               class="hoodie night-padding small-hoodie"
               alt="hoodie"
             />
@@ -340,7 +340,7 @@
           </div>
           <div class="Product-tab all-tab-size">
             <img
-              src="/Images/Merch/JellyBellyyt hoodie.png"
+              src="/Images/Merch/JellyBelly/Hoodie/JellyBellyyt hoodie.png"
               class="hoodie small-hoodie"
               alt="hoodie"
             />
@@ -444,7 +444,7 @@
           </div>
           <div class="Product-tab all-tab-size">
             <img
-              src="/Images/Merch/FerralWolf2003 hoodie.png"
+              src="/Images/Merch/FerralWolf/Hoodie/FerralWolf2003 hoodie.png"
               class="hoodie small-hoodie"
               alt="hoodie"
             />
@@ -484,7 +484,7 @@
                   </span>
                   <span class="product-page-links">
                     <a
-                      href="/HTML/Products/N1ghtW0lf04.html"
+                      href="/HTML/Products/Ferralwolf2003-eco-hoodie.html"
                       class="product-page-link"
                       >More Info</a
                     >
@@ -548,7 +548,7 @@
           </div>
           <div class="Product-tab all-tab-size">
             <img
-              src="/Images/Merch/SIS hoodie.png"
+              src="/Images/Merch/Team/Hoodie/SIS hoodie.png"
               class="hoodie night-padding small-hoodie"
               alt="hoodie"
             />
@@ -588,7 +588,7 @@
                   </span>
                   <span class="product-page-links">
                     <a
-                      href="/HTML/Products/N1ghtW0lf04.html"
+                      href="/HTML/Products/sis-squad-team-hoodie.html"
                       class="product-page-link"
                       >More Info</a
                     >
@@ -650,7 +650,11 @@
     <footer class="footer">
       <span class="footer-content">
         <div class="Footer-img">
-          <img class="footer-logo" src="/Images/Footer Logo.png" alt="logo" />
+          <img
+            class="footer-logo"
+            src="/Images//Merch/Team/Logo/Footer Logo.png"
+            alt="logo"
+          />
         </div>
         <div class="footer-grid">
           <div class="footer-grid-left">
@@ -661,7 +665,9 @@
             </p>
           </div>
           <div class="Details">
-            <a class="Detail-links" href="#">About Us</a>
+            <a class="Detail-links" href="/HTML/footer-links/About-us.html"
+              >About Us</a
+            >
             <a class="Detail-links" href="#">FAQs</a>
             <a class="Detail-links" href="#">Contact Us</a>
             <a class="Detail-links" href="#">Terms & Service</a>
