--- a/HTML/Products/N1ghtW0lf04.html
+++ b/HTML/Products/N1ghtW0lf04.html
@@ -10,7 +10,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/Images/Tab Logo.png"
+      href="/Images/Merch/Team/Logo/Tab Logo.png"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
@@ -25,7 +25,7 @@
           <a href="/Home.html" class="Banner-logo">
             <img
               class="Logo"
-              src="/Images/S-I-S Logo.png"
+              src="/Images/Merch/Team/Logo/S-I-S Logo.png"
               alt="Sis squad logo"
             />
           </a>
@@ -78,7 +78,7 @@
         <div class="Product-images">
           <div class="Product-img-large">
             <img
-              src="/Images/Merch/N1ghtW0lf04 hoodie.png"
+              src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
               class="img-large"
               alt="nightwolf hoodie"
             />
@@ -86,48 +86,57 @@
           <div class="Product-img-collage">
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04 hoodie.png"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0LF04 SIDE SHOT.png"
-                class="img-small"
-              />
-            </span>
-            <span class="collage-block">
-              <img src="/Images/Merch/side shot 2.png" class="img-small" />
-            </span>
-            <span class="collage-block">
-              <img
-                src="/Images/Merch/N1ghtW0lf04 hoodie front model.jpeg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0LF04 SIDE SHOT.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/side shot 2.png"
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04 hoodie back model.jpeg"
+              />
+            </span>
+            <span class="collage-block">
+              <img
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie front model.jpeg"
+                class="img-small"
+              />
+            </span>
+            <span class="collage-block">
+              <img
+                class="img-small"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie back model.jpeg"
               />
             </span>
             <span class="collage-block block-middle-1">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtW0lf04 hoodie back flat.jpeg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie back flat.jpeg"
               />
             </span>
             <span class="collage-block block-middle-2">
               <img
                 class="img-small"
-                src="/Images/Merch/N1ghtWolf04 hoodie front flat.jpeg"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtWolf04 hoodie front flat.jpeg"
               />
             </span>
             <span class="collage-block block-middle-2">
-              <img class="img-small" src="/Images/Merch/night side white.png" />
+              <img
+                class="img-small"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/night side white.png"
+              />
             </span>
             <span class="collage-block block-middle-2">
-              <img class="img-small" src="/Images/Merch/white side night.png" />
+              <img
+                class="img-small"
+                src="/Images/Merch/N1ghtW0lf04/Hoodie/white side night.png"
+              />
             </span>
           </div>
         </div>
@@ -316,7 +325,9 @@
             </p>
           </div>
           <div class="Details">
-            <a class="Detail-links" href="#">About Us</a>
+            <a class="Detail-links" href="/HTML/footer-links/About-us.html"
+              >About Us</a
+            >
             <a class="Detail-links" href="#">FAQs</a>
             <a class="Detail-links" href="#">Contact Us</a>
             <a class="Detail-links" href="#">Terms & Service</a>
