--- a/HTML/Products/jellbelly-classic-eco-hoodie.html
+++ b/HTML/Products/jellbelly-classic-eco-hoodie.html
@@ -25,7 +25,7 @@
           <a href="/Home.html" class="Banner-logo">
             <img
               class="Logo"
-              src="/Images/S-I-S Logo.png"
+              src="/Images/Merch/Team/Logo/S-I-S Logo.png"
               alt="Sis squad logo"
             />
           </a>
@@ -78,7 +78,7 @@
         <div class="Product-images">
           <div class="Product-img-large">
             <img
-              src="/Images/Merch/JellyBellyyt eco hoodie.png"
+              src="/Images/Merch/JellyBelly/Hoodie/JellyBellyYT hoodie.png"
               class="img-large"
               alt="nightwolf hoodie"
             />
@@ -86,38 +86,38 @@
           <div class="Product-img-collage">
             <span class="collage-block">
               <img
-                src="/Images/Merch/JellyBellyyt hoodie.png"
+                src="/Images/Merch/JellyBelly/Hoodie/JellyBellyyt hoodie.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/JellyBellyYT modeled front.png"
+                src="/Images/Merch/JellyBelly/Hoodie/JellyBellyYT modeled front.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/JellyBellyYT Left side shot.png"
+                src="/Images/Merch/JellyBelly/Hoodie/JellyBellyYT Left side shot.png"
                 class="img-small extra-padding"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/JellyBellyYT grey left side.png"
+                src="/Images/Merch/JellyBelly/Hoodie/JellyBellyYT grey left side.png"
                 class="img-small extra-padding"
               />
             </span>
             <span class="collage-block">
               <img
                 class="img-small"
-                src="/Images/Merch/JellyBellyYT grey side right.png"
+                src="/Images/Merch/JellyBelly/Hoodie/JellyBellyYT grey side right.png"
               />
             </span>
             <span class="collage-block block-middle-1">
               <img
                 class="img-small extra"
-                src="/Images/Merch/JellyBellyYT classic hoodie front flat.png"
+                src="/Images/Merch/JellyBelly/Hoodie/JellyBellyYT classic hoodie front flat.png"
               />
             </span>
             <span class="collage-block block-middle-2">
@@ -305,7 +305,11 @@
     <footer class="footer">
       <span class="footer-content">
         <div class="Footer-img">
-          <img class="footer-logo" src="/Images/Footer Logo.png" alt="logo" />
+          <img
+            class="footer-logo"
+            src="/Images/Merch/Team/Logo/Footer Logo.png"
+            alt="logo"
+          />
         </div>
         <div class="footer-grid">
           <div class="footer-grid-left">
@@ -316,7 +320,9 @@
             </p>
           </div>
           <div class="Details">
-            <a class="Detail-links" href="#">About Us</a>
+            <a class="Detail-links" href="/HTML/footer-links/About-us.html"
+              >About Us</a
+            >
             <a class="Detail-links" href="#">FAQs</a>
             <a class="Detail-links" href="#">Contact Us</a>
             <a class="Detail-links" href="#">Terms & Service</a>
