--- a/HTML/Products/sis-squad-team-hoodie.html
+++ b/HTML/Products/sis-squad-team-hoodie.html
@@ -25,7 +25,7 @@
           <a href="/Home.html" class="Banner-logo">
             <img
               class="Logo"
-              src="/Images/S-I-S Logo.png"
+              src="/Images/Merch/Team/Logo/S-I-S Logo.png"
               alt="Sis squad logo"
             />
           </a>
@@ -78,55 +78,58 @@
         <div class="Product-images">
           <div class="Product-img-large">
             <img
-              src="/Images/Merch/SIS hoodie.png"
+              src="/Images/Merch/Team/Hoodie/SIS hoodie.png"
               class="img-large"
               alt="nightwolf hoodie"
             />
           </div>
           <div class="Product-img-collage">
             <span class="collage-block">
-              <img src="/Images/Merch/SIS hoodie.png" class="img-small" />
-            </span>
-            <span class="collage-block">
               <img
-                src="/Images/Merch/SIS Team hoodie front.png"
+                src="/Images/Merch/Team/Hoodie/SIS hoodie.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/SIS Team hoodie left.png"
+                src="/Images/Merch/Team/Hoodie/SIS Team hoodie front.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/SIS Team hoodie right.png"
+                src="/Images/Merch/Team/Hoodie/SIS Team hoodie left.png"
+                class="img-small"
+              />
+            </span>
+            <span class="collage-block">
+              <img
+                src="/Images/Merch/Team/Hoodie/SIS Team hoodie right.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
                 class="img-small"
-                src="/Images/Merch/SIS Team Hoodie back flat.png"
+                src="/Images/Merch/Team/Hoodie/SIS Team Hoodie back flat.png"
               />
             </span>
             <span class="collage-block block-middle-1">
               <img
                 class="img-small extra"
-                src="/Images/Merch/SIS Team hoodie flat front.png"
+                src="/Images/Merch/Team/Hoodie/SIS Team hoodie flat front.png"
               />
             </span>
             <span class="collage-block block-middle-2">
               <img
                 class="img-small"
-                src="/Images/Merch/SIS Team hoodie rounded front.png"
+                src="/Images/Merch/Team/Hoodie/SIS Team hoodie rounded front.png"
               />
             </span>
             <span class="collage-block block-middle-2">
               <img
                 class="img-small"
-                src="/Images/Merch/SIS Team hoodie rounded back.png"
+                src="/Images/Merch/Team/Hoodie/SIS Team hoodie rounded back.png"
               />
             </span>
           </div>
@@ -308,7 +311,11 @@
     <footer class="footer">
       <span class="footer-content">
         <div class="Footer-img">
-          <img class="footer-logo" src="/Images/Footer Logo.png" alt="logo" />
+          <img
+            class="footer-logo"
+            src="/Images/Merch/Team/Logo/Footer Logo.png"
+            alt="logo"
+          />
         </div>
         <div class="footer-grid">
           <div class="footer-grid-left">
@@ -319,7 +326,9 @@
             </p>
           </div>
           <div class="Details">
-            <a class="Detail-links" href="#">About Us</a>
+            <a class="Detail-links" href="/HTML/footer-links/About-us.html"
+              >About Us</a
+            >
             <a class="Detail-links" href="#">FAQs</a>
             <a class="Detail-links" href="#">Contact Us</a>
             <a class="Detail-links" href="#">Terms & Service</a>
