--- a/HTML/footer-links/About-us.html
+++ b/HTML/footer-links/About-us.html
@@ -10,7 +10,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/Images/Tab Logo.png"
+      href="/Images/Merch/Team/Logo/Tab Logo.png"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
@@ -25,7 +25,7 @@
           <a href="/Home.html" class="Banner-logo">
             <img
               class="Logo"
-              src="/Images/S-I-S Logo.png"
+              src="/Images/Merch/Team/Logo/S-I-S Logo.png"
               alt="Sis squad logo"
             />
           </a>
@@ -137,7 +137,11 @@
     <footer class="footer">
       <span class="footer-content">
         <div class="Footer-img">
-          <img class="footer-logo" src="/Images/Footer Logo.png" alt="logo" />
+          <img
+            class="footer-logo"
+            src="/Images/Merch/Team/Logo/Footer Logo.png"
+            alt="logo"
+          />
         </div>
         <div class="footer-grid">
           <div class="footer-grid-left">
@@ -148,7 +152,9 @@
             </p>
           </div>
           <div class="Details">
-            <a class="Detail-links" href="#">About Us</a>
+            <a class="Detail-links" href="/HTML/footer-links/About-us.html"
+              >About Us</a
+            >
             <a class="Detail-links" href="#">FAQs</a>
             <a class="Detail-links" href="#">Contact Us</a>
             <a class="Detail-links" href="#">Terms & Service</a>
@@ -156,7 +162,9 @@
           </div>
           <div class="Our-links">
             <a class="social-links" href="#">N1ghtW0lf04</a>
-            <a class="social-links" href="#">FerralWolf2003</a>
+            <a class="social-links" href="https://beacons.ai/ferralwolf2003"
+              >FerralWolf2003</a
+            >
             <a class="social-links" href="#">ibedrippinYT</a>
           </div>
         </div>
