--- a/Home.html
+++ b/Home.html
@@ -17,7 +17,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/Images/Tab Logo.png"
+      href="/Images/Merch/Team/Logo/Tab Logo.png"
     />
 
     <script src="Script.js"></script>
@@ -32,7 +32,7 @@
             <a href="/Home.html" class="Banner-logo">
               <img
                 class="Logo"
-                src="Images/S-I-S Logo.png"
+                src="Images/Merch/Team/Logo/S-I-S Logo.png"
                 alt="Sis squad logo"
               />
             </a>
@@ -119,7 +119,7 @@
               <div class="grid-right">
                 <div class="N1ghtWolf-hoodie">
                   <img
-                    src="Images/Merch/Connor Hoodie back.png"
+                    src="Images/Merch/N1ghtW0lf04/Hoodie/Connor Hoodie back.png"
                     alt="hoodie"
                     class="Hoodie"
                   />
@@ -134,7 +134,7 @@
                 <div class="ibedrippinYT-Tshirt">
                   <img
                     class="Tshirt"
-                    src="Images/Merch/JellyBellyyt eco hoodie.png"
+                    src="Images/Merch/JellyBelly/Hoodie/JellyBellyyt eco hoodie.png"
                     alt="Tshirt"
                   />
                   <span class="hoodie-description">
@@ -168,7 +168,7 @@
       <div class="Merch-grid">
         <div class="Product-tab">
           <img
-            src="/Images/Merch/N1ghtW0lf04 hoodie.png"
+            src="/Images/Merch/N1ghtW0lf04/Hoodie/N1ghtW0lf04 hoodie.png"
             class="hoodie"
             alt="hoodie"
           />
@@ -260,7 +260,7 @@
         </div>
         <div class="Product-tab">
           <img
-            src="/Images/Merch/JellyBellyyt hoodie.png"
+            src="/Images/Merch/JellyBelly/Hoodie/JellyBellyyt hoodie.png"
             class="hoodie"
             alt="hoodie"
           />
@@ -352,7 +352,7 @@
         </div>
         <div class="Product-tab">
           <img
-            src="/Images/Merch/FerralWolf2003 hoodie.png"
+            src="/Images/Merch/FerralWolf/Hoodie/FerralWolf2003 hoodie.png"
             class="hoodie"
             alt="hoodie"
           />
@@ -443,7 +443,11 @@
           </div>
         </div>
         <div class="Product-tab">
-          <img src="/Images/Merch/SIS hoodie.png" class="hoodie" alt="hoodie" />
+          <img
+            src="/Images/Merch/Team/Hoodie/SIS hoodie.png"
+            class="hoodie"
+            alt="hoodie"
+          />
           <div class="Product-description">
             <p class="product-header">S-I-S SQUAD Hoodie</p>
             <span class="shipping">
@@ -535,7 +539,11 @@
     <footer class="footer">
       <span class="footer-content">
         <div class="Footer-img">
-          <img class="footer-logo" src="Images/Footer Logo.png" alt="logo" />
+          <img
+            class="footer-logo"
+            src="Images/Merch/Team/Logo/Footer Logo.png"
+            alt="logo"
+          />
         </div>
         <div class="footer-grid">
           <div class="footer-grid-left">
