--- a/HTML/Sign-in.html
+++ b/HTML/Sign-in.html
@@ -17,7 +17,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/Images/Tab Logo.png"
+      href="/Images/Merch/Team/Logo/Tab Logo.png"
     />
 
     <script src="Script.js"></script>
@@ -32,7 +32,7 @@
             <a href="/Home.html" class="Banner-logo">
               <img
                 class="Logo"
-                src="/Images/S-I-S Logo.png"
+                src="/Images/Merch/Team/Logo/S-I-S Logo.png"
                 alt="Sis squad logo"
               />
             </a>
@@ -183,7 +183,11 @@
     <footer class="footer">
       <span class="footer-content">
         <div class="Footer-img">
-          <img class="footer-logo" src="/Images/Footer Logo.png" alt="logo" />
+          <img
+            class="footer-logo"
+            src="/Images/Merch/Team/Logo/Footer Logo.png"
+            alt="logo"
+          />
         </div>
         <div class="footer-grid">
           <div class="footer-grid-left">
