Added limited product cards on view all page

--- a/HTML/Products/FerralWolf/Hats/LE-FerralWolf-cap.html
+++ b/HTML/Products/FerralWolf/Hats/LE-FerralWolf-cap.html
@@ -84,7 +84,7 @@
         <div class="Product-images">
           <div class="Product-img-large">
             <img
-              src="/Images/Merch/N1ghtW0lf04/Jumper/L.E NW-white-front-modelled-jumper.png"
+              src="/Images/Merch/FerralWolf/Hats/LE-FerralWolf-Cap-Femodel.png"
               class="img-large"
               alt="nightwolf hoodie"
             />
@@ -92,50 +92,26 @@
           <div class="Product-img-collage">
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Jumper/L.E NW-white-front-modelled-jumper.png"
+                src="/Images/Merch/FerralWolf/Hats/LE-FerralWolf-Cap-Femodel.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Jumper/L.E NW-white-back-modelled-jumper.png"
+                src="/Images/Merch/FerralWolf/Hats/LE-FerralWolf-Cap-frontView.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Jumper/L.E NW-white-front-flat-jumper.png"
+                src="/Images/Merch//FerralWolf/Hats/LE-FerralWolf-Cap-leftView.png"
                 class="img-small"
               />
             </span>
             <span class="collage-block">
               <img
-                src="/Images/Merch/N1ghtW0lf04/Jumper/L.E NW-white-back-flat-jumper.png"
+                src="/Images/Merch/FerralWolf/Hats/LE-FerralWolf-Cap-rightView.png"
                 class="img-small"
-              />
-            </span>
-            <span class="collage-block">
-              <img
-                class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Jumper/L.E NW-black-front-modelled-jumper.png"
-              />
-            </span>
-            <span class="collage-block block-middle-1">
-              <img
-                class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Jumper/L.E NW-black-back-modelled-jumper.png"
-              />
-            </span>
-            <span class="collage-block block-middle-2">
-              <img
-                class="img-small"
-                src="/Images/Merch/N1ghtW0lf04/Jumper/L.E NW-black-front-flat-jumper.png"
-              />
-            </span>
-            <span class="collage-block block-middle-2">
-              <img
-                class="img-small"
-                src="/Images/Merch/N1ghtW0lf04//Jumper/L.E NW-black-back-modelled-jumper.png"
               />
             </span>
           </div>
@@ -143,14 +119,14 @@
         <span class="product-details">
           <h1 class="product-head small-prod-head">
             <strong class="fancy">Limited Edition</strong>
-            N1ghtW0lf04 Jumper
+            FerralWolf Dad Cap
           </h1>
           <p class="product-info">
-            This Jumper has N1ghtW0lf04's Unofficial new logo as he wanted to
-            have some sort of brand change and liked the look of this logo but
-            couldnt bring himself to change the brand just yet. Who knows maybe
-            the sales for this jumper or any Limitied product with his
-            Unofficial logo could bring him to make it official.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio
+            consequuntur, earum in neque consequatur tempore est unde eligendi
+            repellat, sit incidunt soluta nobis mollitia rem. Vitae magnam
+            dolorem illum labore? Lorem ipsum dolor sit amet consectetur
+            adipisicing elit.
           </p>
 
           <span class="available-colours position-blocks block-margin">
@@ -182,8 +158,8 @@
                 </span>
 
                 <span class="pricing">
-                  <p class="original-price">£39.99</p>
-                  <p class="sale-price">£29.99</p>
+                  <p class="original-price">£29.99</p>
+                  <p class="sale-price">£24.99</p>
                 </span>
               </div>
               <div class="prod-payment">
@@ -203,7 +179,6 @@
                         <option>S</option>
                         <option>M</option>
                         <option>L</option>
-                        <option>XL</option>
                       </select>
                     </div>
                     <div class="clothes-quantity-label">
@@ -296,16 +271,15 @@
                 <span class="feature-titles">
                   <h4 class="feature-head">Premium quality</h4>
                   <p class="feature-text">
-                    This Jumper is made from i high quality cotton to keep you
-                    warm and comfortable.
+                    This cap comes with a curved visor to help block the sun
+                    during summer
                   </p>
                 </span>
 
                 <span class="feature-titles">
-                  <h4 class="feature-head">Tag Tear</h4>
+                  <h4 class="feature-head">Premuim Fact</h4>
                   <p class="feature-text">
-                    The tags that come on this jumper can be easily removed for
-                    your convenience.
+                    This cap seems to be one of our best selling items yet.
                   </p>
                 </span>
               </div>
@@ -317,7 +291,11 @@
     <footer class="footer">
       <span class="footer-content">
         <div class="Footer-img">
-          <img class="footer-logo" src="/Images/Footer Logo.png" alt="logo" />
+          <img
+            class="footer-logo"
+            src="Images/Merch/Team/Logo/Footer Logo.png"
+            alt="logo"
+          />
         </div>
         <div class="footer-grid">
           <div class="footer-grid-left">
@@ -338,7 +316,9 @@
           </div>
           <div class="Our-links">
             <a class="social-links" href="#">N1ghtW0lf04</a>
-            <a class="social-links" href="#">FerralWolf2003</a>
+            <a class="social-links" href="https://beacons.ai/ferralwolf2003"
+              >FerralWolf2003</a
+            >
             <a class="social-links" href="#">ibedrippinYT</a>
           </div>
         </div>
@@ -348,7 +328,7 @@
           <ion-icon class="footer-icon fb" name="logo-facebook"></ion-icon>
           <ion-icon class="footer-icon twitter" name="logo-twitter"></ion-icon>
           <ion-icon class="footer-icon insta" name="logo-instagram"></ion-icon>
-          <p class="copyright">&copy; 2024 S-I-S SQUAD</p>
+          <p class="copyright">&copy; 2026 S-I-S SQUAD</p>
         </div>
       </span>
     </footer>
